feature - add favicons and adjusted text on about-page

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -7,3 +7,7 @@ Hi!
 
 I'm Emanuel Imhof, a Crossfitter @ [CrossfitTST311Bern](https://www.crossfittst311.com/) and a Partner/Web-Developer @ [sahli:interactive](https://sahli-interactive.ch/).
 Teaching Kickbox-Fitness @ [Goju Kan Bern](https://www.gojukan.ch/) and Boxfit @ [TST Bern](https://www.tst-fitness.ch/).
+
+I'll post a daily home-workout for my Kickbox-Fitness and Boxfit-Students inspired by the [comptrain home-workouts](https://comptrain.co/home-gym/) until the CORVID19 quarantine is over.<br/>
+I tested every workout (in Crossfit form) the day before. Feel free to share, modify or repost the workouts.
+And last but not least: **Have fun :)**
