bugfix, enhancement - fix markdown-error in quarantine-day-2 and adjusted about/hero texts

--- a/content/posts/quarantine-day-2/index.mdx
+++ b/content/posts/quarantine-day-2/index.mdx
@@ -23,7 +23,7 @@ Inspired by "Spice Girl" by [COMPTRAIN](https://comptrain.co/home-gym/) and "Isa
 50 Lateral Jump Squats<br/>
 250 Air Punches<br/>
 50 Lateral Jump Squats<br/>
-*Notes**<br/>
+*Notes*<br/>
 Air Punches: each hand counts, use bag if available<br/>
 [Lateral Jump Squats](https://images.app.goo.gl/61pBTvzKh3QVNSta6): Squat and Jump (sidewards) over line/glove/whatever<br/>
 
