--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -2,7 +2,7 @@
   Hi.
 </Text>
 
-I'm Emanuel Imhof, a Crossfitter and Web-Developer.
-I'll post a daily home-workout for my Kickbox-Fitness and Boxfit-Students inspired by the [comptrain home-workouts](https://comptrain.co/home-gym/).
-I tested every workout (in Crossfit form) the day before. Feel free to share, modify or repost the workouts.
+I'm Emanuel Imhof, a crossfitter and web-developer.
+I'll post a daily home-workout for my Kickbox-Fitness and Boxfit students inspired by the [COMPTRAIN home-workouts](https://comptrain.co/home-gym/) until the CORVID19 quarantine is over.<br/>
+I tested every workout (in its original crossfit form) the day before. Feel free to share, modify or repost the workouts.
 And last but not least: **Have fun :)**
