--- a/content/posts/quarantine-day-1/index.mdx
+++ b/content/posts/quarantine-day-1/index.mdx
@@ -11,8 +11,8 @@ banner: ./man-working-out.jpg
 
 This ones a combination of the "Walk the Line" and "Jelly Bellies" from [COMPTRAIN](https://comptrain.co/home-gym/).
 
-**5 RFT**<br/>
-40 [G2O](https://images.app.goo.gl/izrTyF6UYKxGb9WM8) (5-20kg or any weight available or you can do unbroken)<br/>
+**5 RFT ([Rounds For Time](https://roundsfortime.com/crossfit-glossary#q-15))**<br/>
+40 G2O - [Ground to Overhead](https://images.app.goo.gl/izrTyF6UYKxGb9WM8) (5-20kg or any weight available or you can do unbroken)<br/>
 30 Lunge-Kicks<br/>
 20 Burpees<br/>
 **directly into<br/>**
