--- a/content/posts/quarantine-day-1/index.mdx
+++ b/content/posts/quarantine-day-1/index.mdx
@@ -28,3 +28,5 @@ This ones a combination of the "Walk the Line" and "Jelly Bellies" from [COMPTRA
 21 Crunches<br/>
 
 **Have fun :)**
+
+![Workout everywhere. anywhere.](./man-working-out.jpg)
