--- a/content/posts/quarantine-day-2/index.mdx
+++ b/content/posts/quarantine-day-2/index.mdx
@@ -36,3 +36,5 @@ Try to go unbroken, for a nice burn :)<br/>
 Russian-Twist: Touch with both hands on both sides = 1rep<br/>
 
 **Have fun :)**
+
+![Put in work](./achievement-adult-architecture-athlete.jpg)
