--- a/content/posts/quarantine-day-3/index.mdx
+++ b/content/posts/quarantine-day-3/index.mdx
@@ -13,8 +13,8 @@ banner: ./person-wearing-grey-nike-sneakers.jpg
 Inspired by "Death by Burpees" [COMPTRAIN](https://comptrain.co/home-gym/) and the core-piece is from Freeletics Gym.
 
 **EMOM (Every Minute on the Minute)**<br/>
-25 Air Punches
-3+x Burpees
+25 Air Punches<br/>
+3+x Burpees<br/>
 *Notes*<br/>
 Burpees: Start with 3 reps, add 1 rep each round until you can't make it under one minute.<br/>
 Air Punches: each hand counts, use bag if available<br/>
