feature - day 4 and better titles

--- a/content/posts/quarantine-day-1/index.mdx
+++ b/content/posts/quarantine-day-1/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quarantine Day 1
+title: Day 1 - Walk the Jelly Bellies
 date: 2020-03-16
 description: This ones a combination of the "Walk the Line" and "Jelly Bellies".
 tags:
