--- a/content/posts/quarantine-day-2/index.mdx
+++ b/content/posts/quarantine-day-2/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quarantine Day 2
+title: Day 2 - Spicy Isabel
 slug: /quarantine-day-2
 date: 2020-03-17
 description: Inspired by "Spice Girl" and "Isabel".
