--- a/content/posts/quarantine-day-3/index.mdx
+++ b/content/posts/quarantine-day-3/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quarantine Day 3
+title: Day 3 - Death by Completics
 slug: /quarantine-day-3
 date: 2020-03-18
 description: Inspired by "Death by Burpees".
@@ -14,17 +14,18 @@ Inspired by "Death by Burpees" [COMPTRAIN](https://comptrain.co/home-gym/) and t
 
 **EMOM (Every Minute on the Minute)**<br/>
 25 Air Punches<br/>
-3+x Burpees<br/>
+3 + (1-2-3-4-5-etc.) Burpees<br/>
 *Notes*<br/>
 Burpees: Start with 3 reps, add 1 rep each round until you can't make it under one minute.<br/>
 Air Punches: each hand counts, use bag if available<br/>
 Scale the numbers so you can do around 8-10 rounds.
 
 **CORE**<br/>
-25 - 20 - 15 - 10 -5<br/>
+25 - 20 - 15 - 10 - 5<br/>
 Plate Situps<br/>
 Plate Cocoons<br/>
 *Notes*<br/>
+Workout goes: 25 Situps, 25 Cocoons, 20 Situps, 20 Cocoons, and so on.<br/>
 Use a 5kg plate if available, but any weight will do (or just a frisbee, a glove, your cat...)<br/>
 
 **Enjoy!**
