--- a/content/posts/quarantine-day-16/index.mdx
+++ b/content/posts/quarantine-day-16/index.mdx
@@ -6,6 +6,7 @@ description: A missed workout, can always be doene later.
 tags:
   - Metcon
   - Core
+  - Home
 banner: ./color-colour-fitness-health.jpg
 ---
 
