enhancement - update text on home and about

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -3,6 +3,6 @@
 </Text>
 
 I'm Emanuel Imhof, a crossfitter and web-developer.
-I'll post a daily home-workout for my Kickbox-Fitness and Boxfit students inspired by the [COMPTRAIN home-workouts](https://comptrain.co/home-gym/) until the CORVID19 quarantine is over.<br/>
-I tested every workout (in its original crossfit form) the day before. Feel free to share, modify or repost the workouts.
+I'll post a daily home workout inspired by several other free home workouts (COMPTRAIN, TheProgrm, CrossfitInvictus, etc.) until the CORVID19 quarantine is over.<br/>
+Feel free to share, modify or repost the workouts.
 And last but not least: **Have fun :)**
