--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -8,6 +8,6 @@ Hi!
 I'm Emanuel Imhof, a crossfitter @ [CrossfitTST311Bern](https://www.crossfittst311.com/) and a partner/web-developer @ [sahli:interactive](https://sahli-interactive.ch/).
 Teaching Kickbox-Fitness @ [Goju Kan Bern](https://www.gojukan.ch/) and Boxfit @ [TST Bern](https://www.tst-fitness.ch/).
 
-I'll post a daily home-workout for my Kickbox-Fitness and Boxfit students inspired by the [COMPTRAIN home-workouts](https://comptrain.co/home-gym/) until the CORVID19 quarantine is over.<br/>
-I tested every workout (in its original crossfit form) the day before. Feel free to share, modify or repost the workouts.
+I'll post a daily home workout inspired by several other free home workouts (COMPTRAIN, TheProgrm, CrossfitInvictus, etc.) until the CORVID19 quarantine is over.<br/>
+Feel free to share, modify or repost the workouts.
 And last but not least: **Have fun :)**
