--- a/content/posts/quarantine-day-20/index.mdx
+++ b/content/posts/quarantine-day-20/index.mdx
@@ -2,7 +2,7 @@
 title: Day 20 - All the tabatas
 slug: /quarantine-day-20
 date: 2020-04-04
-description: An easy going 30min Workout.
+description: 20min of Tabata.
 tags:
   - Metcon
   - Home
