--- a/content/posts/quarantine-day-33/index.mdx
+++ b/content/posts/quarantine-day-33/index.mdx
@@ -2,7 +2,7 @@
 title: Day 33 - Progrm Day
 slug: /quarantine-day-33
 date: 2020-04-17
-description: A nice ascending ladder from TheProgrm.
+description: A nice descending ladder from TheProgrm.
 tags:
   - Home
   - Metcon
@@ -10,7 +10,7 @@ tags:
 banner: ./man-in-black-crew-neck-shirt-doing-pull-ups.jpg
 ---
 
-A nice ascending ladder from [TheProgrm](https://theprogrm.com/) and a classic Core Workout.
+A nice descending ladder from [TheProgrm](https://theprogrm.com/) and a classic Core Workout.
 
 **Metcon: 50-40-30-20-10**
 * Down Ups over Object
