enhancement -  announcement on home-page

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -6,3 +6,11 @@ I'm Emanuel Imhof, a crossfitter and web-developer.
 I'll post a daily home workout inspired by several other free home workouts (COMPTRAIN, TheProgrm, CrossfitInvictus, etc.) until the CORVID19 quarantine is over.<br/>
 Feel free to share, modify or repost the workouts.
 And last but not least: **Have fun :)**
+
+**Announcement:** As almost all Gyms here in Switzerland are scheduled to reopen on May 11th, I will no longer be posting daily workouts after that.<br/>
+The last one will be on May 10th. If you are still in need of programming, you can reach out to me on [Instagram](https://www.instagram.com/m43nu/), [Twitter](https://twitter.com/m43nu) or [Email](mailto:hello@m43nu.ch), I'm happy to help.<br/>
+Or use any of my sources: [COMPTRAIN](https://comptrain.co/home-gym/), [TheProgrm](https://www.instagram.com/theprogrm/), [Sonny Webster](https://go.sonnywebsteracademy.com/free-trial-offer), etc.
+
+Thanks for following my blog and hope to see you soon at the [Box](https://www.crossfittst311.com/) or the [Dojo](https://www.gojukan.ch/) :)<br/>
+Keep smashing!<br/>
+Emanuel
